assets/sass/components/_header.scss
// Header

.site-header {
	position: relative;
	height: grid(10);
}

.bg-x {
	fill: none;
	stroke: $white;
	position: absolute;
	top: grid(8);
	left: 0;
	z-index: -1;
	width: 1500px;
	@include media-md {
		width: 106%;
		height: auto;
	}
}

.icon-logo {
	fill: $black;
	position: absolute;
	bottom: 0;
	left: 0;
	width: 245px;

	@include media-md {
		left: 160px;
	}
}

.icon-C,
.icon-L,
.icon-X {
	display: none;
}

@include media-md {
	.icon-C,
	.icon-L,
	.icon-X {
		display: block;
		position: fixed;
		height: auto;
	}
	.icon-C {
		width: 90px;
		top: 100px;
		left: 40px;
	}
	.icon-L {
		width: 50px;
		right: 4%;
		top: 80px;
	}
	.icon-X {
		width: 80px;
		bottom: 80px;
		right: 4%;
		fill: $red;
	}
}

